--- a/README
+++ b/README
@@ -4,14 +4,14 @@
 
 
 Инструкция по развертыванию и установке:
-1. Заходите в git
-2. Открываете проект
-3. Code -> копируйте ссылку 
-4. Открываете CMD пишите git clone и вставляете ссылку
-5. Открываете папку в которую скопировали
-6. Развертываете проекты как папку в PyCharm 
-7. Нажимаете зеленый треугольник сверху
-8. Снизу появится 2 ip адреса -> жмете на второй 
+1. Заходим в git
+2. Открываем проект
+3. Code -> копируем ссылку 
+4. Открываем CMD пишем git clone и вставляем ссылку
+5. Открываем папку в которую скопировали
+6. Развертываем проекты как папку в PyCharm 
+7. Нажимаем зеленый треугольник сверху
+8. Снизу появится 2 ip адреса -> нажимаем на второй 
 9. Приложение готово к работе
 
 Ссылка на видеоролик на Rutube:
